Archive2/36/23b742f907d35f/output
main.cpp: In function 'int main(int, char**)':
main.cpp:13:34: error: call of overloaded 'f(main(int, char**)::__lambda0)' is ambiguous
     f([&](int _idx){ return 7.9;});
                                  ^
main.cpp:13:34: note: candidates are:
main.cpp:4:6: note: void f(bool)
 void f(bool _switch) {
      ^
main.cpp:8:6: note: void f(std::function<double(int)>)
 void f(std::function<double (int)> _f) {
      ^
